# tax_simulator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  justfile  main.py  pyproject.toml
app/: main.py
app/assets/: styles.css
app/components/: metrics.py  sidebar.py  tables.py  tax_details.py
configs/: config.yaml  system.yaml
configs/dashboard/: dashboard.yaml
configs/icms/: icms_optimized.yaml  icms_padrao.yaml
src/tax_simulator/config/: config_loader.py  config_schema.py  config_store.py
src/tax_simulator/data_ingestion/: loaders.py  repositories.py
src/tax_simulator/domain/: engines.py  models.py
src/tax_simulator/simulation/: models.py  scenario_engine.py
src/tax_simulator/utils/: helpers.py
tests/test_data_ingestion/: test_repositories.py
